--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,4 @@ authors = ["Julien Wajsberg <felash@gmail.com>"]
 
 [dependencies]
 "openzwave-stateful" = { git = "https://github.com/fxbox/openzwave-stateful-rust" }
-
+env_logger = "0.3"
